apps/public/home-assistant/home-assistant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---

apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: home-assistant 
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: homeassistant-1
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: http 
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.4.24"
